Attempt at Improved SneakyBot
New SneakyBot Version with attempt at MiniMax with Alpha Beta Pruning